[package]
name = "vole-rust"
version = "0.1.0"
authors = ["Phuoc"]

[lib]
name = "vole_rust"
path = "src/lib.rs"

[dependencies]
lambdaworks_math = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-math" }
lambdaworks_crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-crypto" }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
sha2 = "0.10.8"
aes = "0.8.4"

[[bin]]
name = "test_ot"

[[bin]]
name = "sender"

[[bin]]
name = "receiver"

[[bin]]
name = "test_prg"