[package]
name = "vole-rust"
version = "0.1.0"
authors = ["Phuoc"]

[lib]
name = "vole_rust"
path = "src/lib.rs"

[dependencies]
lambdaworks_math = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-math" }
lambdaworks_crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", package = "lambdaworks-crypto" }
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["full"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
sha2 = "0.10.8"
aes = "0.8.4"

[[bin]]
name = "sender_ot"

[[bin]]
name = "receiver_ot"

[[bin]]
name = "sender_cope"

[[bin]]
name = "receiver_cope"

[[bin]]
name = "sender_triple_cope"

[[bin]]
name = "receiver_triple_cope"

[[bin]]
name = "test_prg"

[[bin]]
name = "test_field"

[[bin]]
name = "receiver_tcp"

[[bin]]
name = "sender_tcp"

[[bin]]
name = "sender_base_svole"

[[bin]]
name = "receiver_base_svole"

[[bin]]
name = "test_two_key_prp"

[[bin]]
name = "test_ccrh"

[[bin]]
name = "sender_otpre"

[[bin]]
name = "receiver_otpre"

[[bin]]
name = "sender_iknp"

[[bin]]
name = "receiver_iknp"

[[bin]]
name = "test_mul"

[[bin]]
name = "sender_base_cot"

[[bin]]
name = "receiver_base_cot"